# pyiamvortex

./: CHANGELOG.md  CONTRIBUTING.MD  LICENSE  Makefile  README.md  requirements-dev.txt  script.py  setup.cfg
.github/: release.yml
.github/workflows/: release.yml
src/pyiamvortex/: cli.py  vortex.py
tests/: test_cli.py  test_vortex.py
