[metadata]
name = pyiamvortex
version = 0.1.0
long_description = file:README.md
long_description_content_type = text/markdown
author = Joel McCoy
author_email = "nbajoel@gmail.com"
url = https://github.com/nbajoel/pyiamvortex
license = MIT
test_suite = tests
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
keywords = iam aws parser
project_urls =
    Documentation = https://github.com/nbajoel/pyiamvortex/blob/master/README.md
    Issue tracker = https://github.com/getmoto/moto/issues
    Changelog = https://github.com/nbajoel/pyiamvortex/blob/master/CHANGELOG.md

[options]
python_requires = >=3.9
install_requires =
    requests
package_dir =
    pyiamvortex = src/pyiamvortex
include_package_data = True
